Added Hint button. On its click added ceck of opened ceils. If wrong opened image is found, appears Alert with row and column of wrong selected ceil.

--- a/src/game/Ceil.mxml
+++ b/src/game/Ceil.mxml
@@ -118,6 +118,17 @@
 				resizeImage();
 				resizeImagesInRow();
 			}
+			
+			public function get state():CeilState
+			{
+				var showedImages:Array = new Array(6);
+				for (var i:int = 0; i < 6; ++i)
+				{
+					showedImages[i] = imageContainer.visible && imageContainer.getChildAt(i).visible;
+				}
+				
+				return new CeilState(_selectedImgNumber, showedImages);
+			}
 		
 			protected function addImageToRow(cls:Class, number:int):void
 			{
